# task-meld

./: .gitignore  main.py  pyproject.toml
api/: auth.py  schemas.py
api/endpoints/: assignments.py  auth.py  register.py  tasks.py  twoFA.py  users.py
core/: config.py  security.py
db/: crud.py  database.py  entities.py
old/: entities.py
taskmeld-frontend/: package-lock.json  package.json
taskmeld-frontend/src/: App.js
taskmeld-frontend/src/components/: AssignmentList.js  CreateAssignment.js  CreateTask.js  ErrorPage.js  LoginForm.js  RegisterForm.js  SearchTasks.js  TaskForm.js  TaskList.js  UpdateUserRole.js  UserList.js  UserTasks.js  UsersByTask.js
taskmeld-frontend/src/old/: AssignmentForm.js  AssignmentsPage.js  HomePage.js  TaskForm.js  TaskSearch.js  TaskSearchPage.js  TaskUsers.js  TaskUsersPage.js  TasksPage.js  UserForm.js  UsersPage.js
taskmeld-frontend/src/pages/: AssignmentsPage.js  Login.js  Register.js  TaskSearchPage.js  TaskUsersPage.js  TasksPage.js  UserTasksPage.js  UsersPage.js
taskmeld-frontend/src/services/: api.js
